pest/src/snapshots/pest__error__tests__display_parsing_error_negatives.snap
---
source: pest/src/error.rs
expression: error
---
 --> 2:2
  |
2 | cd
  |  ^---
  |
  = unexpected 4, 5, or 6
