pest/src/snapshots/pest__error__tests__display_parsing_error_positives.snap
---
source: pest/src/error.rs
expression: error
---
 --> 2:2
  |
2 | cd
  |  ^---
  |
  = expected 1 or 2
