pest/src/snapshots/pest__error__tests__display_parsing_error_unknown.snap
---
source: pest/src/error.rs
expression: error
---
 --> 2:2
  |
2 | cd
  |  ^---
  |
  = unknown parsing error
