pest/src/snapshots/pest__error__tests__error_with_path.snap
---
source: pest/src/error.rs
expression: error
---
 --> file.rs:2:2
  |
2 | cd
  |  ^---
  |
  = unexpected 4, 5, or 6; expected 1, 2, or 3
