pest/src/snapshots/pest__error__tests__underline_with_tabs.snap
---
source: pest/src/error.rs
expression: error
---
 --> file.rs:1:3
  |
1 | a	xbc
  |  	^---
  |
  = unexpected 4, 5, or 6; expected 1, 2, or 3
